--- a/config.env
+++ b/config.env
@@ -1,8 +1,8 @@
 CONFIG_ENV=config.env
 #内核源地址
-KERNEL_SOURCE=https://github.com/LineageOS/android_kernel_oneplus_sm8250
+KERNEL_SOURCE=https://github.com/mvaisakh/nabu
 #分支
-KERNEL_SOURCE_BRANCH=lineage-21
+KERNEL_SOURCE_BRANCH=main
 #内核配置文件
 KERNEL_CONFIG=kona_defconfig
 
