--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
 CONFIG_ENV=config.env
 #内核源地址
-KERNEL_SOURCE=https://github.com/mvaisakh/nabu
+KERNEL_SOURCE=https://github.com/pzure/nabu
 #分支
 KERNEL_SOURCE_BRANCH=main
 #内核配置文件
